# MCP_FE_Tool

./: .env  .gitignore  BUGFIX_NUMPY_SERIALIZATION.md  BUGFIX_PROGRESS_BAR_DISPLAY.md  BUGFIX_URL_PATH.md  CODE_REVIEW_REPORT.md  FEATURE_SELECTION_ENGLISH_HTML.md  FEATURE_SELECTION_GUIDE.md  FEATURE_SELECTION_SUMMARY.md  INTERFACE_UNIFICATION_UPDATE.md  LLM_TOOL_UPDATE.md  OPENFE_FEATURE.md  OPENFE_FIX_SUMMARY.md  OPENFE_QUICKSTART.md  OUTPUT_DIR_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART_FEATURE_SELECTION.md  README.md  REAL_WORLD_DATASET_TEST_REPORT.md  URL_SUPPORT_UPDATE.md  USER_DIR_UPDATE.md  USER_OUTPUT_MANAGEMENT.md  __main__.py  pyproject.toml  requirements.txt  single_port_server.py  test_html_report.py
docs/superpowers/plans/: 2026-04-18-chemical-feature-pipeline.md  2026-04-20-cif-pipeline.md
docs/superpowers/specs/: 2026-04-18-chemical-feature-pipeline-design.md  2026-04-19-cif-pipeline-design.md
src/materials_feature_engineering_mcp/: __init__.py  cif_archive.py  cif_featurizer.py  cif_pipeline_runner.py  cif_pipeline_store.py  config.py  data_explorer.py  feature_generator.py  feature_selector.py  mcp_tool.py  pipeline_runner.py  pipeline_store.py  report_generator.py  smiles_featurizer.py  utils.py
tests/: test_cif_pipeline.py  test_regressions.py
