[project]
name = "materials-feature-engineering-mcp"
version = "0.1.0"
description = "Materials Science Feature Engineering MCP Tool"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "pandas",
    "numpy",
    "scipy",
    "scikit-learn<1.4.0",  # OpenFE 需要 <1.4.0 版本（squared 参数兼容性）
    "matplotlib",
    "seaborn",
    "matminer",
    "litellm",
    "pymatgen",
    "openfe",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/materials_feature_engineering_mcp"]

[tool.uv]
dev-dependencies = []